Move to scripts folder

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -11,4 +11,4 @@ jobs:
       - name: Bootstrap
         shell: powershell
         run: |
-          ./bootstrap.ps1
+          .\scripts\bootstrap.ps1
