--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -11,5 +11,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: Bootstrap
         shell: powershell
+        env:
+          BLOB_STORAGE_CONNECTION: ${{ secrets.BLOB_STORAGE_CONNECTION_STRING }}
+          COSMOSDB_CONNECTION: ${{ secrets.COSMOSDB_CONNECTION_STRING }}
         run: |
           .\scripts\bootstrap.ps1
